snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/maven-metadata.xml.sha256
0ec99863773339cd6ecec5f566299ea0ec42393f0e0206d7e746b2082e447f18